--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
